changes with Sql error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port: 8180
 management.server.port: 9101
 
 # Enabling H2 Console
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:test
 #spring.datasource.driverClassName=org.h2.Driver
