--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port: 8180
 management.server.port: 9101
 
-# Enabling H2 Console
-spring.h2.console.enabled=true
+#Enabling H2 Console
+#spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:test
 #spring.datasource.driverClassName=org.h2.Driver
@@ -18,10 +18,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.format_sql=true
 
-
-#logging.pattern.console=%clr(%d{HH:mm:ss.SSS} [%t] %-5level %logger{12} - %msg %n) {yellow}
 logging.level.root=INFO
-#logging.level.com.package=TRACE
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
